<resources>
    <string name="app_name">Memoria v.2</string>
    <string name="adicione_uma_categoria">Adicione uma categoria</string>
    <string name="crie_uma_categoria">Crie uma categoria</string>
    <string name="categoria_reticencias">Categoria..</string>
    <string name="salvar">Salvar</string>
    <string name="close">close</string>
    <string name="open">open</string>
    <string name="feito">Feito</string>
    <string name="minimo_de_4_letras">Mínimo de 4 caracteres</string>
    <string name="deletar_item">Deletar item</string>
    <string name="deseja_deletar_a_categoria_e_seu_conteudo">Deseja deletar essa categoria e todo seu conteúdo?</string>
    <string name="deseja_deletar_a_memoria">Deseja deletar essa anotação? Essa ação não pode ser desfeita. </string>
    <string name="deletar">Deletar</string>
    <string name="cancelar">Cancelar</string>
    <string name="item_deletado">Item deletado</string>
    <string name="editar_categoria">Editar categoria</string>
    <string name="titulo_opcional">Título (Opcional)</string>
    <string name="anota_o">Anotação</string>
    <string name="n_vel_de_import_ncia">Nível de importância:</string>
    <string name="min_5_caracteres_anotacao">A anotação deve ter pelo menos 5 caracteres</string>
    <string name="categoria_adicionada">Categoria adicionada</string>
    <string name="deslize_uma_categoria_para_a_direita_para_excluir">- Deslize uma categoria para a direita para excluir.</string>
    <string name="inicie_um_deslize_para_a_direita_e_ent_o_deslize_para_a_esquerda_para_editar_a_categoria">- Inicie um deslize para a direita, e então deslize para a esquerda para editar a categoria.</string>
    <string name="as_categorias_ficam_salvas_na_aba_lateral_esquerda">- As categorias ficam salvas na aba lateral esquerda.</string>
    <string name="desativar_dark_mode">Desativar dark mode (beta)</string>
    <string name="ativar_dark_mode_beta">Ativar dark mode (beta)</string>
</resources>