<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_black_grad"
    android:orientation="vertical"
    tools:context=".view.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:text="@string/crie_uma_categoria"
        android:textColor="@color/colorAccent"
        android:textSize="39sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:layout_constraintBottom_toTopOf="@+id/main_activity_btnSalvarCategoria"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/main_activity_editCategoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/categoria_reticencias"
            android:inputType="textPersonName"
            android:maxLength="20"
            android:textColor="@color/colorAccent"
            android:paddingLeft="20dp"
            android:textSize="30sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/main_activity_btnSalvarCategoria"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/salvar"
        app:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>